<resources>
    <string name="app_name">LessonSchedule</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>
    <string name="nothing">啥也没有</string>

    <string name="timeClass1">1\n07:50\n08:35</string>
    <string name="timeClass2">2\n08:40\n09:25</string>
    <string name="timeClass3">3\n09:45\n10:30</string>
    <string name="timeClass4">4\n10:35\n11:20</string>
    <string name="timeClass5">5\n11:25\n12:10</string>
    <string name="timeClass6">6\n14:00\n14:45</string>
    <string name="timeClass7">7\n14:50\n15:35</string>
    <string name="timeClass8">8\n15:55\n16:40</string>
    <string name="timeClass9">9\n16:45\n17:30</string>
    <string name="timeClass10">10\n17:35\n18:20</string>
    <string name="timeClass11">11\n19:30\n20:15</string>
    <string name="timeClass12">12\n20:20\n21:05</string>
    <string name="timeClass13">13\n21:10\n21:55</string>

</resources>
